--- a/combined/combinedcpp/cppcombined.vcxproj
+++ b/combined/combinedcpp/cppcombined.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{83183fbd-b949-42d8-9b40-19556913b120}</ProjectGuid>
-    <RootNamespace>KeyboardEvents</RootNamespace>
+    <ProjectGuid>{742ccd21-0119-46c7-9d93-287e6e2d5413}</ProjectGuid>
+    <RootNamespace>cppcombined</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,24 +127,26 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="cppcombined.h" />
     <ClInclude Include="framework.h" />
-    <ClInclude Include="KeyboardEvents.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="KeyboardEvents.cpp" />
+    <ClCompile Include="cppcombined.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="KeyboardEvents.rc" />
+    <ResourceCompile Include="cppcombined.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="icon_heart.ico" />
-    <Image Include="KeyboardEvents.ico" />
+    <Image Include="cppcombined.ico" />
+    <Image Include="icon.ico" />
     <Image Include="small.ico" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="cursor_emoji.cur" />
+    <None Include="cur1.cur" />
+    <None Include="cur2.cur" />
+    <None Include="cur3.cur" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
