--- a/inputWiindow/сpp-input/сpp-input.vcxproj
+++ b/inputWiindow/сpp-input/сpp-input.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{becba607-921d-4ae2-9882-79edc438e699}</ProjectGuid>
-    <RootNamespace>ModalDialog</RootNamespace>
+    <ProjectGuid>{3071b75a-d58b-4780-8268-4babcf10b584}</ProjectGuid>
+    <RootNamespace>сppinput</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -128,19 +128,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
-    <ClInclude Include="Modal Dialog.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="сpp-input.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Modal Dialog.cpp" />
+    <ClCompile Include="сpp-input.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="Modal Dialog.rc" />
+    <ResourceCompile Include="сpp-input.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="Modal Dialog.ico" />
     <Image Include="small.ico" />
+    <Image Include="сpp-input.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
