--- a/questions/WindowsProject2/WindowsProject2.vcxproj
+++ b/questions/WindowsProject2/WindowsProject2.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{3071b75a-d58b-4780-8268-4babcf10b584}</ProjectGuid>
-    <RootNamespace>сppinput</RootNamespace>
+    <ProjectGuid>{ca3cffa4-82f5-435d-afbf-82aca7ff38b4}</ProjectGuid>
+    <RootNamespace>WindowsProject2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -130,17 +130,17 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="сpp-input.h" />
+    <ClInclude Include="WindowsProject2.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="сpp-input.cpp" />
+    <ClCompile Include="WindowsProject2.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="сpp-input.rc" />
+    <ResourceCompile Include="WindowsProject2.rc" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="small.ico" />
-    <Image Include="сpp-input.ico" />
+    <Image Include="WindowsProject2.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
